<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:text="@string/copyright" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/football" />

    <Button
        android:id="@+id/button_database_filter"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/buttonshape"
        android:text="@string/title_activity_database_filter"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_post_team"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_database_filter"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/title_activity_post_team"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_my_squad"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button_database_filter"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/title_activity_my_squad"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>
