<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="${packageName}.${activityClass}" >

        
    <Button
        android:id="@+id/button_send"
        android:layout_width="190dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/buttonshape"
        android:text="@string/title_activity_post_team"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView_To"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_email_receiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint"
            android:inputType="textEmailAddress"
            android:textColor="#ffffff"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</RelativeLayout>
